--- a/host/22587/table1/index.htm
+++ b/host/22587/table1/index.htm
@@ -7,30 +7,29 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="Tabeller för rapport (HTML) m.m._29155_Styles">
-<!--table
+<style id="Tabeller för rapport (HTML) m.m._29155_Styles"><!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 .font529155
 	{color:black;
-	font-size:18.0pt;
-	font-weight:700;
+	font-size:11.0pt;
+	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
 .font629155
 	{color:black;
-	font-size:18.0pt;
-	font-weight:700;
+	font-size:11.0pt;
+	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
 .font729155
 	{color:black;
-	font-size:18.0pt;
-	font-weight:700;
+	font-size:11.0pt;
+	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
 	font-family:Arial, sans-serif;
@@ -77,15 +76,15 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:11.0pt;
-	font-weight:400;
+	font-size:18.0pt;
+	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
+	text-align:center;
+	vertical-align:middle;
 	border-top:none;
 	border-right:none;
 	border-bottom:1.5pt solid #003082;
@@ -108,32 +107,10 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-number-format:General;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:1.5pt solid #003082;
-	border-left:none;
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
 .xl6629155
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:18.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl6729155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -151,7 +128,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6829155
+.xl6729155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -169,7 +146,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6929155
+.xl6829155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -187,8 +164,29 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
--->
-</style>
+.xl6929155
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:1.5pt solid #003082;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+--></style>
 </head>
 
 <body>
@@ -209,70 +207,68 @@ x:publishsource="Excel">
  <col width=526 style='mso-width-source:userset;mso-width-alt:18688;width:394pt'>
  <col width=387 style='mso-width-source:userset;mso-width-alt:13767;width:290pt'>
  <col width=526 style='mso-width-source:userset;mso-width-alt:18688;width:394pt'>
- <tr height=38 style='height:28.2pt'>
-  <td height=38 class=xl6429155 width=526 style='height:28.2pt;width:394pt'>&nbsp;</td>
-  <td class=xl6529155 width=387 style='width:290pt'>Fastighetsenergi (kWh/m<font
-  class="font629155"><sup>2</sup></font><font class="font529155">, A</font><font
-  class="font729155"><sub>temp</sub></font><font class="font529155">)</font></td>
-  <td class=xl6529155 width=526 style='width:394pt'>Hushålls/verksamhetsenergi
-  (kWh/m<font class="font629155"><sup>2</sup></font><font class="font529155">,
-  A</font><font class="font729155"><sub>temp</sub></font><font
-  class="font529155">)</font></td>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6929155 width=526 style='height:23.4pt;width:394pt'>Alla
+  värden i kWh/m<font class="font629155"><sup>2</sup></font><font
+  class="font529155">, A</font><font class="font729155"><sub>temp</sub></font></td>
+  <td class=xl6429155 width=387 style='width:290pt'>Fastighetsenergi<span
+  style='mso-spacerun:yes'> </span></td>
+  <td class=xl6429155 width=526 style='width:394pt'>Hushålls/verksamhetsenergi</td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl6629155 style='height:23.4pt'>Bostäder, totalt</td>
-  <td class=xl6629155>50</td>
-  <td class=xl6629155>20</td>
+  <td height=31 class=xl6529155 style='height:23.4pt'>Bostäder, totalt</td>
+  <td class=xl6529155>50</td>
+  <td class=xl6529155>20</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav värme</td>
-  <td class=xl6829155>15</td>
-  <td class=xl6929155>-</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav värme</td>
+  <td class=xl6729155>15</td>
+  <td class=xl6829155>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav varmvatten</td>
-  <td class=xl6829155>25</td>
-  <td class=xl6929155>-</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav varmvatten</td>
+  <td class=xl6729155>25</td>
+  <td class=xl6829155>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav kyla</td>
-  <td class=xl6829155>0</td>
-  <td class=xl6929155>-</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav kyla</td>
+  <td class=xl6729155>-</td>
+  <td class=xl6829155>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav el</td>
-  <td class=xl6829155>10</td>
-  <td class=xl6829155>20</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav el</td>
+  <td class=xl6729155>10</td>
+  <td class=xl6729155>20</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl6329155 style='height:14.4pt'></td>
-  <td class=xl6929155></td>
-  <td class=xl6929155></td>
+  <td class=xl6829155></td>
+  <td class=xl6829155></td>
  </tr>
  <tr height=30 style='height:22.8pt'>
-  <td height=30 class=xl6629155 style='height:22.8pt'>Lokaler, totalt</td>
-  <td class=xl6629155>45</td>
-  <td class=xl6629155>50</td>
+  <td height=30 class=xl6529155 style='height:22.8pt'>Lokaler, totalt</td>
+  <td class=xl6529155>45</td>
+  <td class=xl6529155>50</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav värme</td>
-  <td class=xl6829155>15</td>
-  <td class=xl6929155>-</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav värme</td>
+  <td class=xl6729155>15</td>
+  <td class=xl6829155>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav varmvatten</td>
-  <td class=xl6829155>5</td>
-  <td class=xl6929155>-</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav varmvatten</td>
+  <td class=xl6729155>5</td>
+  <td class=xl6829155>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav kyla</td>
-  <td class=xl6829155>15</td>
-  <td class=xl6929155>-</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav kyla</td>
+  <td class=xl6729155>15</td>
+  <td class=xl6829155>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6729155 style='height:14.4pt'>varav el</td>
-  <td class=xl6829155>10</td>
-  <td class=xl6829155>50</td>
+  <td height=19 class=xl6629155 style='height:14.4pt'>varav el</td>
+  <td class=xl6729155>10</td>
+  <td class=xl6729155>50</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
@@ -292,3 +288,4 @@ x:publishsource="Excel">
 </body>
 
 </html>
+
