--- a/host/22587/table/index.htm
+++ b/host/22587/table/index.htm
@@ -7,10 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="Tabeller för rapport (HTML) m.m._29155_Styles"><!--table
+<style id="Tabeller för rapport (HTML) m.m._17546_Styles">
+<!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
-.font529155
+.font517546
 	{color:black;
 	font-size:11.0pt;
 	font-weight:400;
@@ -18,7 +19,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.font629155
+.font617546
 	{color:black;
 	font-size:11.0pt;
 	font-weight:400;
@@ -26,7 +27,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.font729155
+.font717546
 	{color:black;
 	font-size:11.0pt;
 	font-weight:400;
@@ -34,7 +35,31 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl1529155
+.font817546
+	{color:black;
+	font-size:18.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.font917546
+	{color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.font1017546
+	{color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl1517546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -52,7 +77,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6329155
+.xl6317546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -70,7 +95,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6429155
+.xl6417546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -92,7 +117,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6529155
+.xl6517546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -110,7 +135,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6629155
+.xl6617546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -128,7 +153,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6729155
+.xl6717546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -146,7 +171,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6829155
+.xl6817546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -164,7 +189,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6929155
+.xl6917546
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -186,7 +211,44 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
---></style>
+.xl7017546
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:18.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:"\#\,\#\#0";
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl7117546
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:"\#\,\#\#0";
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+-->
+</style>
 </head>
 
 <body>
@@ -199,7 +261,7 @@ mellan DIV-parametrarna att ersättas.-->
 <!--BÖRJAN PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
 <!----------------------------->
 
-<div id="Tabeller för rapport (HTML) m.m._29155" align=center
+<div id="Tabeller för rapport (HTML) m.m._17546" align=center
 x:publishsource="Excel">
 
 <table border=0 cellpadding=0 cellspacing=0 width=1439 style='border-collapse:
@@ -207,68 +269,110 @@ x:publishsource="Excel">
  <col width=526 style='mso-width-source:userset;mso-width-alt:18688;width:394pt'>
  <col width=387 style='mso-width-source:userset;mso-width-alt:13767;width:290pt'>
  <col width=526 style='mso-width-source:userset;mso-width-alt:18688;width:394pt'>
- <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl6929155 width=526 style='height:23.4pt;width:394pt'>Alla
-  värden i kWh/m<font class="font629155"><sup>2</sup></font><font
-  class="font529155">, A</font><font class="font729155"><sub>temp</sub></font></td>
-  <td class=xl6429155 width=387 style='width:290pt'>Fastighetsenergi<span
-  style='mso-spacerun:yes'> </span></td>
-  <td class=xl6429155 width=526 style='width:394pt'>Hushålls/verksamhetsenergi</td>
+ <tr height=30 style='height:22.8pt'>
+  <td height=30 class=xl6517546 width=526 style='height:22.8pt;width:394pt'>Tabell
+  1. Antagna nyckeltal, energibehov<span style='mso-spacerun:yes'> </span></td>
+  <td class=xl1517546 width=387 style='width:290pt'></td>
+  <td class=xl1517546 width=526 style='width:394pt'></td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl6529155 style='height:23.4pt'>Bostäder, totalt</td>
-  <td class=xl6529155>50</td>
-  <td class=xl6529155>20</td>
+  <td height=31 class=xl6917546 style='height:23.4pt'>Alla värden i kWh/m<font
+  class="font617546"><sup>2</sup></font><font class="font517546">, A</font><font
+  class="font717546"><sub>temp</sub></font></td>
+  <td class=xl6417546>Fastighetsenergi<span style='mso-spacerun:yes'> </span></td>
+  <td class=xl6417546>Hushålls/verksamhetsenergi</td>
+ </tr>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6517546 style='height:23.4pt'>Bostäder, totalt</td>
+  <td class=xl6517546>50</td>
+  <td class=xl6517546>20</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav värme</td>
-  <td class=xl6729155>15</td>
-  <td class=xl6829155>-</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav värme</td>
+  <td class=xl6717546>15</td>
+  <td class=xl6817546>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav varmvatten</td>
-  <td class=xl6729155>25</td>
-  <td class=xl6829155>-</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav varmvatten</td>
+  <td class=xl6717546>25</td>
+  <td class=xl6817546>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav kyla</td>
-  <td class=xl6729155>-</td>
-  <td class=xl6829155>-</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav kyla</td>
+  <td class=xl6717546>-</td>
+  <td class=xl6817546>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav el</td>
-  <td class=xl6729155>10</td>
-  <td class=xl6729155>20</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav el</td>
+  <td class=xl6717546>10</td>
+  <td class=xl6717546>20</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6329155 style='height:14.4pt'></td>
-  <td class=xl6829155></td>
-  <td class=xl6829155></td>
+  <td height=19 class=xl6317546 style='height:14.4pt'></td>
+  <td class=xl6817546></td>
+  <td class=xl6817546></td>
  </tr>
  <tr height=30 style='height:22.8pt'>
-  <td height=30 class=xl6529155 style='height:22.8pt'>Lokaler, totalt</td>
-  <td class=xl6529155>45</td>
-  <td class=xl6529155>50</td>
+  <td height=30 class=xl6517546 style='height:22.8pt'>Lokaler, totalt</td>
+  <td class=xl6517546>45</td>
+  <td class=xl6517546>50</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav värme</td>
-  <td class=xl6729155>15</td>
-  <td class=xl6829155>-</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav värme</td>
+  <td class=xl6717546>15</td>
+  <td class=xl6817546>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav varmvatten</td>
-  <td class=xl6729155>5</td>
-  <td class=xl6829155>-</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav varmvatten</td>
+  <td class=xl6717546>5</td>
+  <td class=xl6817546>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav kyla</td>
-  <td class=xl6729155>15</td>
-  <td class=xl6829155>-</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav kyla</td>
+  <td class=xl6717546>15</td>
+  <td class=xl6817546>-</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl6629155 style='height:14.4pt'>varav el</td>
-  <td class=xl6729155>10</td>
-  <td class=xl6729155>50</td>
+  <td height=19 class=xl6617546 style='height:14.4pt'>varav el</td>
+  <td class=xl6717546>10</td>
+  <td class=xl6717546>50</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl1517546 style='height:14.4pt'></td>
+  <td class=xl1517546></td>
+  <td class=xl1517546></td>
+ </tr>
+ <tr height=30 style='height:22.8pt'>
+  <td height=30 class=xl6517546 style='height:22.8pt'>Tabell 2. Antagen A<font
+  class="font1017546"><sub>temp</sub></font><font class="font917546"> i Loudden</font></td>
+  <td class=xl1517546></td>
+  <td class=xl1517546></td>
+ </tr>
+ <tr height=38 style='height:28.2pt'>
+  <td height=38 class=xl6917546 style='height:28.2pt'>Alla värden i m<font
+  class="font617546"><sup>2</sup></font></td>
+  <td class=xl6417546>A<font class="font817546"><sub>temp</sub></font></td>
+  <td class=xl1517546></td>
+ </tr>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6517546 style='height:23.4pt'>Bostäder</td>
+  <td class=xl7017546>500 647</td>
+  <td class=xl1517546></td>
+ </tr>
+ <tr height=30 style='height:22.8pt'>
+  <td height=30 class=xl6517546 style='height:22.8pt'>Lokaler</td>
+  <td class=xl7017546>55 627</td>
+  <td class=xl1517546></td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl1517546 style='height:14.4pt'></td>
+  <td class=xl7117546></td>
+  <td class=xl1517546></td>
+ </tr>
+ <tr height=30 style='height:22.8pt'>
+  <td height=30 class=xl6517546 style='height:22.8pt'>Totalt</td>
+  <td class=xl7017546>556 274</td>
+  <td class=xl1517546></td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
@@ -288,4 +392,3 @@ x:publishsource="Excel">
 </body>
 
 </html>
-
