--- a/host/22587/organisation_table/index.htm
+++ b/host/22587/organisation_table/index.htm
@@ -7,7 +7,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="index-filer/filelist.xml">
+<link rel=File-List
+href="organisation%20och%20energibalans_MH20221104-filer/filelist.xml">
 <!--[if !mso]>
 <style>
 v\:* {behavior:url(#default#VML);}
@@ -417,7 +418,7 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl66323 style='border-top:none'>FÄ</td>
   <td class=xl66323 style='border-top:none'>Sortering</td>
   <td class=xl66323 style='border-top:none'>N/A</td>
-  <td class=xl66323 style='border-top:none'>SVOA</td>
+  <td class=xl66323 style='border-top:none'>N/A</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl67323 style='height:14.4pt'></td>
