--- a/host/22451/LCC_table/index.htm
+++ b/host/22451/LCC_table/index.htm
@@ -16,8 +16,7 @@ x\:* {behavior:url(#default#VML);}
 .shape {behavior:url(#default#VML);}
 </style>
 <![endif]-->
-<style id="Ekonomisk kalkyl LCC_9839_Styles">
-<!--table
+<style id="Ekonomisk kalkyl LCC_9839_Styles"><!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 .xl159839
@@ -1232,8 +1231,7 @@ x\:* {behavior:url(#default#VML);}
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
--->
-</style>
+--></style>
 </head>
 
 <body>
@@ -1503,8 +1501,9 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl669839></td>
  </tr>
  <tr height=32 style='height:24.0pt'>
-  <td height=32 class=xl1189839 colspan=2 style='height:24.0pt'>Prognos
-  kassaflöde (grundscenario)</td>
+  <td height=32 class=xl1189839 style='height:24.0pt'>Prognos kassaflöde
+  (grundscenario)</td>
+  <td class=xl1199839>&nbsp;</td>
   <td class=xl1209839>&nbsp;</td>
   <td class=xl1209839>&nbsp;</td>
   <td class=xl1089839>&nbsp;</td>
@@ -1559,9 +1558,9 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl879839>Värme till extern fjärrvärmeleverantör</td>
   <td class=xl799839><span
   style='mso-spacerun:yes'>                                                                                           
-  </span>2 780 920 </td>
-  <td class=xl739839><span style='mso-spacerun:yes'>                         
-  </span>6 952 </td>
+  </span>4 151 720 </td>
+  <td class=xl739839><span style='mso-spacerun:yes'>                       
+  </span>10 379 </td>
   <td class=xl739839><span style='mso-spacerun:yes'>       </span>400 </td>
   <td class=xl1249839>Kan alternativt säljas via hetvattennät, konkurrerar med
   lågtemperaturvärme<span style='mso-spacerun:yes'> </span></td>
@@ -1571,7 +1570,7 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl859839>SUMMA INBETALNINGAR</td>
   <td class=xl899839><span
   style='mso-spacerun:yes'>                                                                                         
-  </span>11 984 000 </td>
+  </span>13 355 000 </td>
   <td class=xl739839></td>
   <td class=xl739839></td>
   <td class=xl1249839>&nbsp;</td>
@@ -1589,7 +1588,7 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl859839>MAXIMAL SUMMA UTBETALNINGAR</td>
   <td class=xl909839><span
   style='mso-spacerun:yes'>                                                                                           
-  </span>2 242 000 </td>
+  </span>3 613 000 </td>
   <td class=xl729839></td>
   <td class=xl729839></td>
   <td class=xl1249839>För att uppnå lönsamhetsmål</td>
@@ -1614,13 +1613,12 @@ mellan DIV-parametrarna att ersättas.-->
   <td height=20 class=xl1239839 style='height:15.0pt'>&nbsp;</td>
   <td class=xl879839>Extern el</td>
   <td class=xl889839><span
-  style='mso-spacerun:yes'>                                                                                              
-  </span>770 325 </td>
-  <td class=xl739839><span
-  style='mso-spacerun:yes'>                             </span>514 </td>
-  <td class=xl739839><span style='mso-spacerun:yes'>    </span>1 500 </td>
-  <td class=xl1249839>Endast pumpenergi m.m., kompressorel ej inkluderat i
-  grundscenario</td>
+  style='mso-spacerun:yes'>                                                                                           
+  </span>2 152 215 </td>
+  <td class=xl739839><span style='mso-spacerun:yes'>                         
+  </span>1 656 </td>
+  <td class=xl739839><span style='mso-spacerun:yes'>    </span>1 300 </td>
+  <td class=xl1249839>Pumpenergi samt kompressorel spillvatten-VP</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl1239839 style='height:15.0pt'>&nbsp;</td>
@@ -1665,7 +1663,7 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl879839>DoU samt övriga omkostnader</td>
   <td class=xl889839><span
   style='mso-spacerun:yes'>                                                                                           
-  </span>1 472 000 </td>
+  </span>1 461 000 </td>
   <td class=xl789839></td>
   <td class=xl789839></td>
   <td class=xl1249839>Maximal kostnad för DoU+övrigt</td>
@@ -1675,7 +1673,7 @@ mellan DIV-parametrarna att ersättas.-->
   <td class=xl1279839>SUMMA UTBETALNINGAR</td>
   <td class=xl1289839><span
   style='mso-spacerun:yes'>                                                                                           
-  </span>2 242 000 </td>
+  </span>3 613 000 </td>
   <td class=xl1299839>&nbsp;</td>
   <td class=xl1299839>&nbsp;</td>
   <td class=xl1309839>&nbsp;</td>
@@ -1701,3 +1699,4 @@ mellan DIV-parametrarna att ersättas.-->
 </body>
 
 </html>
+
